# async-lua-embed

./: LICENSE  README.md  main.py  pyproject.toml
embed/: __init__.py  environment.py  executor.py
embed/_sandbox/: sandbox.lua
embed/models/: dao.py  item.py
embed/util/: time_limit.py
examples/: custom_env.py  dao_example.py  register_global.py  too_many_instructions.py  too_much_memory.py
src/async_lua/: __init__.py  dao.py  environment.py  executor.py  sandbox.lua  sandbox.py
